--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,13 +1,13 @@
 <nav>
     <a href="/">
         {%- if page.url == "/" -%}
-            style="color: red"
+            style="color: red;"
         {%- endif -%}
         Home
     </a>
     <a href="/about.html">
     {%- if page.url == "/about.html" -%}
-            style="color: red"
+            style="color: red;"
     {%- endif -%}
     
         About    
