--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,7 +9,7 @@
 
 <nav>
     {%- for item in site.data.navigation -%}
-        <a href="{{item.link}}" {%- if page.url == item.link -%}
+        <a href="{{item.link}}" {%- if page.url == {{item.link}} -%}
             style="color: red;"
         {%- endif -%}>
             {{ item.name }}
